# rules_apple_remote_xcframework

./: .gitignore  MODULE.bazel  README.md  test_static_framework.sh
.bcr/: metadata.template.json  source.template.json
.github/scripts/: update_module_bazel.py
.github/workflows/: ci.yaml  publish.yaml  release.yaml
examples/: BUILD.bazel  MODULE.bazel  Test.swift
remote_xcframework/: extensions.bzl
