module(name = "rules_apple_remote_xcframework_example")

bazel_dep(name = "rules_apple_remote_xcframework", version = "0.0.0")
local_path_override(
    module_name = "rules_apple_remote_xcframework",
    path = "..",
)

bazel_dep(name = "rules_swift", version = "3.6.1")

remote_xcframework = use_extension(
    "@rules_apple_remote_xcframework//remote_xcframework:extensions.bzl",
    "remote_xcframework_extension",
)

remote_xcframework.xcframework(
    name = "Lottie",
    url = "https://github.com/airbnb/lottie-ios/releases/download/4.6.0/Lottie.xcframework.zip",
    sha256 = "45e1c5d7040654fe498f9bc6de99d88ae0092714fb9f424949850e1ad66217e4",
    strip_prefix = "",
)

use_repo(
    remote_xcframework, 
    "Lottie"
)